sdk/python/lib/test/automation/errors/compilation_error/go/main.go
package main

import (
	"github.com/mariospas/pulumi/sdk/v3/go/pulumi"
)

func main() {
	pulumi.Run(func(ctx *pulumi.Context) error {
		will not compile
		return nil
	})
}
